feat: 抽奖逻辑完善